<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.android.assignment_1.SignInPage">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/SignIn_textView_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_SignIn_textView_userName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/SignIn_editText_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/caption_hint_SignIn_editText_userName"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/SignIn_textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_SignIn_textView_password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/SignIn_editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/caption_hint_SignIn_editText_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/SignIn_button_linkToForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/caption_SignIn_forgotPassword_button"
            android:textAllCaps="false"
            android:textColor="@color/editorColorPrimary"
            android:textSize="15dp"
            android:onClick="onForgotPasswordClick"/>


        <Button
            android:id="@+id/SignIn_button_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLogInClick"
            android:text="@string/caption_SignIn_logIn_button" />

    </LinearLayout>

</LinearLayout>
