<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.assignment_1.ForgotPasswordPage">

    <TextView
        android:id="@+id/forgotPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_forgotPassword_textView"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/forgotPassword_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caption_hint_forgotPassword_username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/forgotPassword_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caption_hint_forgotPassword_email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/forgotPassword_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_forgotPassword_submit_button"
        android:onClick="onSubmitClick"/>
</LinearLayout>
